2005-01-14  Martin Blom  <martin@blom.org>

	* Updated the README files. The language source files are now
	included in the ahidev archive.

2005-01-13  Martin Blom  <martin@blom.org>

	* AHI preferences: Localized the anti-click time and CPU load
	values as well. [Michael Malyshev]

	* Added updated Russion translations by Michael Malyshev. Thanks!

2005-01-12  Martin Blom  <martin@blom.org>

	* The binary user archive now includes the .ct files for easy
	translation updates.

	* Updated to FlexCat 2.6.6-cvs-2005-01-12 and regenerated language
	files.

	* Released AHI preferences 5.15.

	* Released ahi.device 5.56.

	* Added 'FILL' switch to FlexCat when generating the catalogs in
	order to make missing strings use the built-in English defaults
	instead of nothing. [Pierre Giroux]

	* Localized Hz, dB and the number of channels. [Michael Malyshev]

	* Only try to build emu10kx.audio for AROS if <asm/io.h> is found.

2005-01-11  Martin Blom  <martin@blom.org>

	* filesave.audio: Fixed a compiler warning. (No bumprev.) [Gunther
	Nikl]

	* AHI preferences: Used floating point instruction introduced by
	the -m68020-60 switch by accident. Added -msoft-float for m68k to
	prevent this. [Gunther Nikl]

	* ahi.device: Tweaked the m68k gateway stubs so no nops are used
	anymore. [Gunther Nikl]
 
	* Applied more patches (mainly gcc 3.x-related but also
	C_c_noauto.sd and gas stab) from Gunther Nikl. Thanks!

2005-01-09  Martin Blom  <martin@blom.org>

	* Released AHI 5.15b (ix86be only).

	* Released ahi.device 5.55.

	* ahi.device: Minor modifications to make the ix86be version build
	again, this time using a non-broken version of the compiler. :-)

2005-01-08  Martin Blom  <martin@blom.org>

	* Released AHI 5.15.

	* Released ahi.device 5.54.

	* Released AHI preferences 5.14.

	* AHI preferences: Moved the selection of scale modes to the
	global, advanced prerference page. Changed the default to "Full".

	* ahi.device: Now used global scale mode settings. Changed the