@@ -1,3 +1,8 @@
+2005-01-23  Martin Blom  <martin@blom.org>
+
+	* ahi.device: That CPU overload protection (PreTimer/PostTimer)
+	thing didn't work ... at all. Duh. [Gunther Nikl]
+
 2005-01-14  Martin Blom  <martin@blom.org>
 
 	* Updated the README files. The language source files are now
